# AI-Campus-admin-agent

./: .env  README.md  main.py  pyproject.toml
campus-admin-agent/: README.md
campus-admin-agent/backend/: README.md  campus_admin.db  requirements.txt
campus-admin-agent/backend/app/: main.py
campus-admin-agent/backend/app/Tools/: Campus_analytics_tools.py  FAQ_tools.py  RAG_tool.py  student_management_tool.py
campus-admin-agent/backend/app/Tools/data/: SMIT.txt
campus-admin-agent/backend/app/agent/: agent.py
campus-admin-agent/backend/app/api/: routes.py
campus-admin-agent/backend/app/mock_agents/: __init__.py
campus-admin-agent/backend/app/models/: models.py
campus-admin-agent/backend/app/services/: service.py
campus-admin-agent/backend/app/utils/: helpers.py  pydentic_model.py
campus-admin-agent/frontend/: README.md  package.json
campus-admin-agent/frontend/components/: Navbar.tsx
campus-admin-agent/frontend/pages/: index.tsx
